--- a/resources/sass/select2.scss
+++ b/resources/sass/select2.scss
@@ -16,14 +16,18 @@ select,
     border: 1px solid #31384d !important;
     color: #f2f4f8 !important;
     border-radius: 10px !important;
-    min-height: 58px;
+    min-height: 46px;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__rendered,
 .select2-container--default .select2-selection--multiple .select2-selection__rendered {
     color: #f2f4f8 !important;
-    line-height: 56px !important;
-    padding-left: 16px !important;
+    line-height: 44px !important;
+    padding-left: 12px !important;
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    padding-right: 34px !important;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__placeholder,
@@ -32,7 +36,7 @@ select,
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
-    height: 56px !important;
+    height: 44px !important;
     right: 10px;
 }
 
@@ -107,8 +111,8 @@ select,
 .selectize-control.single .selectize-input,
 .selectize-control.multi .selectize-input {
     border-radius: 10px !important;
-    min-height: 58px;
-    padding: 12px 38px 12px 16px !important;
+    min-height: 46px;
+    padding: 6px 34px 6px 12px !important;
 }
 
 .selectize-control.single .selectize-input:after {
@@ -126,4 +130,23 @@ select,
 .selectize-dropdown .selected {
     background: rgba(244, 164, 9, 0.2) !important;
     color: #fff !important;
+}
+
+
+.selectize-control.single .selectize-input > input,
+.selectize-control.single .selectize-input .item {
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    padding-right: 34px !important;
+}
+
+
+.select2-container--default .select2-selection--single {
+    height: 46px !important;
+}
+
+.select2-container--default .select2-selection--multiple {
+    min-height: 46px !important;
+    height: auto !important;
 }
